Fixed the styling of category horizontal scroll bar.

--- a/public/CSS/filter.css
+++ b/public/CSS/filter.css
@@ -1,3 +1,10 @@
+.div-center-position {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 1;
+}
+
 #filter-tax-switch-container {
     display: inline-flex;
     margin: 2rem 0;
@@ -51,16 +58,16 @@
 
 /* Category Slider Buttons */
 .navigation-btn {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    z-index: 10;
     background: none;
     border-radius: 50%;
     border: solid 0.1px grey;
     font-size: 1rem;
     width: 2rem;
     height: 2rem;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
 }
 
 .left-nav-arrow {
@@ -69,6 +76,11 @@
 
 .right-nav-arrow {
     right: 0;
+}
+
+.space-div {
+    width: 3rem;
+    height: 10%;
 }
 
 /* Tax Switch Section */
